# rustrogueliketutorial

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  wasmbuild.bat
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
book/: book.toml
chapter-01-hellorust/: Cargo.toml
chapter-02-helloecs/: Cargo.toml
chapter-02-helloecs/src/: main.rs
chapter-03-walkmap/: Cargo.toml
chapter-03-walkmap/src/: main.rs
chapter-04-newmap/: Cargo.toml
chapter-05-fov/: Cargo.toml
chapter-05-fov/src/: components.rs  main.rs  map.rs  player.rs  visibility_system.rs
chapter-06-monsters/: Cargo.toml
chapter-07-damage/: Cargo.toml
chapter-08-ui/: Cargo.toml
chapter-09-items/: Cargo.toml
chapter-09-items/src/: components.rs  damage_system.rs  gui.rs  inventory_system.rs  main.rs  map.rs  melee_combat_system.rs  monster_ai_system.rs  player.rs  spawner.rs
chapter-10-ranged/: Cargo.toml
chapter-11-loadsave/: Cargo.toml
chapter-11-loadsave/src/: components.rs  gui.rs  inventory_system.rs  main.rs  map.rs  monster_ai_system.rs  player.rs  rect.rs  saveload_system.rs  spawner.rs
chapter-12-delvingdeeper/: Cargo.toml
chapter-27-cellular-automata/: Cargo.toml
chapter-27-cellular-automata/src/: components.rs  gui.rs  main.rs  map.rs  melee_combat_system.rs  monster_ai_system.rs  particle_system.rs  player.rs  trigger_system.rs  visibility_system.rs
chapter-27-cellular-automata/src/map_builders/: bsp_dungeon.rs  bsp_interior.rs  cellular_automata.rs  mod.rs  simple_map.rs
chapter-28-drunkards-walk/: Cargo.toml
chapter-28-drunkards-walk/src/: gui.rs  main.rs  map.rs  rex_assets.rs  saveload_system.rs  spawner.rs
chapter-28-drunkards-walk/src/map_builders/: cellular_automota.rs  common.rs  drunkard.rs  mod.rs
chapter-36-layers/: Cargo.toml
chapter-36-layers/src/: hunger_system.rs  main.rs  map.rs  trigger_system.rs
chapter-36-layers/src/map_builders/: area_starting_points.rs  bsp_dungeon.rs  bsp_interior.rs  cellular_automata.rs  cellular_automota.rs  common.rs  dla.rs  drunkard.rs  maze.rs  mod.rs  room_based_stairs.rs  simple_map.rs  voronoi.rs
chapter-36-layers/src/map_builders/prefab_builder/: mod.rs
chapter-36-layers/src/map_builders/waveform_collapse/: mod.rs
chapter-49-town3/: Cargo.toml
chapter-49-town3/raws/: spawns.json
chapter-49-town3/src/: bystander_ai_system.rs  camera.rs  components.rs  gui.rs  main.rs  particle_system.rs  player.rs  rex_assets.rs  saveload_system.rs
chapter-49-town3/src/map/: mod.rs
chapter-49-town3/src/map_builders/: door_placement.rs  rooms_corridors_bsp.rs  town.rs
chapter-49-town3/src/map_builders/waveform_collapse/: constraints.rs  mod.rs
chapter-49-town3/src/raws/: item_structs.rs  mob_structs.rs  rawmaster.rs
chapter-51-gear/: Cargo.toml
chapter-51-gear/raws/: spawns.json
chapter-51-gear/src/: camera.rs  components.rs  damage_system.rs  gamesystem.rs  gui.rs  inventory_system.rs  main.rs  melee_combat_system.rs  player.rs  saveload_system.rs  spawner.rs  visibility_system.rs
chapter-51-gear/src/map/: mod.rs
chapter-51-gear/src/map_builders/: mod.rs  town.rs
chapter-51-gear/src/raws/: item_structs.rs  mob_structs.rs  rawmaster.rs
chapter-54-xp/: Cargo.toml
chapter-54-xp/raws/: spawns.json
chapter-54-xp/src/: animal_ai_system.rs  bystander_ai_system.rs  components.rs  damage_system.rs  gui.rs  hunger_system.rs  inventory_system.rs  main.rs  melee_combat_system.rs  monster_ai_system.rs  player.rs  spawner.rs  trigger_system.rs  visibility_system.rs
chapter-54-xp/src/map/: mod.rs  themes.rs  tiletype.rs
chapter-54-xp/src/map_builders/: distant_exit.rs  mod.rs  room_draw.rs  rooms_corridors_nearest.rs
chapter-54-xp/src/map_builders/waveform_collapse/: mod.rs
chapter-54-xp/src/raws/: rawmaster.rs
chapter-58-itemstats/: Cargo.toml
chapter-58-itemstats/raws/: spawns.json
chapter-58-itemstats/src/: components.rs  damage_system.rs  gui.rs  inventory_system.rs  main.rs  map_indexing_system.rs  melee_combat_system.rs  player.rs  saveload_system.rs  spawner.rs  trigger_system.rs
chapter-58-itemstats/src/ai/: adjacent_ai_system.rs  approach_ai_system.rs  chase_ai_system.rs  encumbrance_system.rs  flee_ai_system.rs  initiative_system.rs  visible_ai_system.rs
chapter-58-itemstats/src/map_builders/: area_starting_points.rs  bsp_interior.rs  mod.rs  room_based_stairs.rs  room_corridor_spawner.rs  room_sorter.rs  simple_map.rs
chapter-58-itemstats/src/raws/: item_structs.rs  mob_structs.rs  rawmaster.rs
chapter-61-townportal/: Cargo.toml
chapter-61-townportal/raws/: spawns.json
chapter-61-townportal/src/: components.rs  damage_system.rs  gui.rs  hunger_system.rs  inventory_system.rs  lighting_system.rs  main.rs  movement_system.rs  player.rs  saveload_system.rs  spawner.rs  trigger_system.rs
chapter-61-townportal/src/ai/: chase_ai_system.rs  flee_ai_system.rs  quipping.rs  turn_status.rs
chapter-61-townportal/src/map/: dungeon.rs  themes.rs
chapter-61-townportal/src/map_builders/: area_ending_point.rs  distant_exit.rs  town.rs
chapter-61-townportal/src/map_builders/prefab_builder/: mod.rs  prefab_levels.rs  prefab_sections.rs
chapter-61-townportal/src/map_builders/waveform_collapse/: constraints.rs  mod.rs
chapter-61-townportal/src/raws/: item_structs.rs  rawmaster.rs
chapter-61-townportal/src/spatial/: mod.rs
chapter-75-darkplaza/: Cargo.toml
chapter-75-darkplaza/raws/: spawns.json
chapter-75-darkplaza/src/: player.rs
chapter-75-darkplaza/src/gui/: hud.rs
chapter-75-darkplaza/src/map/: camera.rs  themes.rs
chapter-75-darkplaza/src/map_builders/: area_ending_point.rs  cellular_automata.rs  dark_elves.rs  mod.rs  room_based_spawner.rs  room_corner_rounding.rs  room_corridor_spawner.rs  simple_map.rs  town.rs
chapter-75-darkplaza/src/raws/: mob_structs.rs  rawmaster.rs  weapon_traits.rs
chapter-75-darkplaza/src/spatial/: mod.rs
chapter-75-darkplaza/src/systems/: particle_system.rs  visibility_system.rs
chapter-75-darkplaza/src/systems/ai/: default_move_system.rs
chapter-75-darkplaza/src/systems/dispatcher/: multi_thread.rs
(+1222 files in other folders)
