[package]
name = "rust_roguelike_tutorial"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { git = "https://github.com/thebracket/rltk_rs", features = [ "serialization" ] }
specs = "0.15.0"
specs-derive = "0.4.0"

[workspace]
members = [ 
    "chapter-01-hellorust", 
    "chapter-02-helloecs", 
    "chapter-03-walkmap", 
    "chapter-04-newmap",
    "chapter-05-fov",
    "chapter-06-monsters",
    "chapter-07-damage",
    "chapter-08-ui",
    "chapter-09-items",
    "chapter-10-ranged",
    "chapter-11-loadsave",
    "chapter-12-delvingdeeper",
    "chapter-13-difficulty"
    ]
