[package]
name = "rust_roguelike_tutorial"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { git = "https://github.com/thebracket/rltk_rs", features = [ "serialization" ] }
specs = "0.15.0"
specs-derive = "0.4.0"

[target.'cfg(any(target_arch = "wasm32"))'.dependencies]
web-sys = { version = "0.3", features=["console"] }
wasm-bindgen = "0.2"

[workspace]
members = [ 
    "chapter-01-hellorust", 
    "chapter-02-helloecs", 
    "chapter-03-walkmap", 
    "chapter-04-newmap",
    "chapter-05-fov",
    "chapter-06-monsters",
    "chapter-07-damage",
    "chapter-08-ui",
    "chapter-09-items",
    "chapter-10-ranged",
    "chapter-11-loadsave",
    "chapter-12-delvingdeeper",
    "chapter-13-difficulty",
    "chapter-14-gear",
    "chapter-16-nicewalls",
    "chapter-17-blood",
    "chapter-18-particles",
    "chapter-19-food",
    "chapter-20-magicmapping",
    "chapter-21-rexmenu",
    "chapter-22-simpletraps",
    "chapter-23-generic-map",
    "chapter-24-map-testing",
    "chapter-25-bsproom-dungeons",
    "chapter-26-bsp-interiors",
    "chapter-27-cellular-automota",
    "chapter-28-drunkards-walk",
    "chapter-29-mazes",
    "chapter-30-dla",
    "chapter-31-symmetry",
    "chapter-32-voronoi",
    "chapter-33-wfc",
    "chapter-34-vaults",
    "chapter-35-vaults2",
    "chapter-36-layers",
    "chapter-37-layers2",
    "chapter-38-rooms",
    "chapter-39-halls",
    "chapter-40-doors",
    "chapter-41-camera",
    "chapter-45-raws1",
    "chapter-46-raws2",
    "chapter-47-town1",
    "chapter-48-town2",
    "chapter-49-town3"
    ]

[profile.dev]
opt-level = 1
