[package]
name = "chapter-02-helloecs"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.6.0" }
specs = { version = "0.15.0" }
specs-derive = "0.4.0"
