[package]
name = "chapter-03-walkmap"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { path = "C:/Users/herbe/Documents/LearnRust/rltk_rs/rltk" }
specs = "0.16.1"
specs-derive = "0.4.1"
